# smalltv-display-image

./: .gitignore  LICENSE  README.md  platformio.ini
src/: bitmap.hpp  main.cpp
telegram-bot/: .gitignore  Cargo.toml  Dockerfile  sample.env
telegram-bot/src/: lib.rs  main.rs  photo.rs  telegram.rs  uploader.rs
