[package]
name = "telegram-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
teloxide = { version = "^0.15", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
async-tempfile = "0.7"
image = "0.25"
rqrr = "0.9"
qrcode = "0.14"
russh-sftp = "2.1.1"
russh = "0.52"
anyhow = { version = "1.0", features = ["backtrace"] }
